--- a/main.css
+++ b/main.css
@@ -95,22 +95,44 @@ End reset
   flex-direction: column;
   align-content: center;
   text-align: center;
+	margin-left: 5vw;
+	margin-right: 5vw;
 }
 
 .to-do-list-box {
 	background-color: lightblue;
 	margin-top: 10px;
 	height: 50px;
-	width: 1000px;
+	width: 70vw;
+	font-family: Arial, Helvetica, sans-serif;
 	border-style: ridge;
 	border-width: 1px;
 	border-color: black;
 	display: flex;
   flex-direction: row;
+	align-items: center;
 	justify-content: space-between;
 }
 
 .param-box {
 	margin-left: 20px;
 	margin-right: 20px;
+}
+
+#project-view {
+	width: 20vw;
+	background-color: lightgrey;
+}
+
+#main-content-screen {
+	display: flex;
+	flex-direction: row;
+	height: 100%;
+}
+
+.project-box {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 2vh;
+	padding-left: 2vw;
+	padding-top: 1vh;
 }
