--- a/main.css
+++ b/main.css
@@ -100,7 +100,22 @@ End reset
 }
 
 .to-do-list-box {
-	background-color: lightblue;
+	background-color: lightgreen;
+	margin-top: 10px;
+	height: 50px;
+	width: 70vw;
+	font-family: Arial, Helvetica, sans-serif;
+	border-style: ridge;
+	border-width: 1px;
+	border-color: black;
+	display: flex;
+  flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.to-do-list-box-open {
+	background-color: pink;
 	margin-top: 10px;
 	height: 50px;
 	width: 70vw;
@@ -135,4 +150,31 @@ End reset
 	font-size: 2vh;
 	padding-left: 2vw;
 	padding-top: 1vh;
+	cursor:pointer;
+}
+
+.project-box:hover {
+	background-color: darkgrey;
+}
+
+.completion-box {
+	margin-right: 1vw;
+	background-color: green;
+	color: white;
+	cursor:pointer;
+}
+
+.completion-box:hover {
+	background-color: darkgreen;
+}
+
+.completion-box-open {
+	margin-right: 1vw;
+	background-color: red;
+	color: white;
+	cursor:pointer;
+}
+
+.completion-box-open:hover {
+	background-color: darkred;
 }
