--- a/main.css
+++ b/main.css
@@ -153,6 +153,15 @@ End reset
 	cursor:pointer;
 }
 
+.project-head {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 3vh;
+	padding-left: 2vw;
+	padding-top: 1vh;
+	text-decoration: underline;
+	
+}
+
 .project-box:hover {
 	background-color: darkgrey;
 }
