--- a/main.css
+++ b/main.css
@@ -187,3 +187,22 @@ End reset
 .completion-box-open:hover {
 	background-color: darkred;
 }
+
+.content-project-box {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 3vh;
+	margin-right: auto;
+}
+
+.project-form {
+	padding-left: 2vw;
+	padding-top: 1vh;
+	display: flex;
+	flex-wrap: wrap;
+
+}
+
+.text-field {
+	width: 12vw;
+	margin-right: 1vw;
+}
