--- a/main.css
+++ b/main.css
@@ -129,6 +129,17 @@ End reset
 	justify-content: space-between;
 }
 
+.to-do-list-form {
+	margin-top: 10px;
+	height: 50px;
+	width: 70vw;
+	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+  flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
 .param-box {
 	margin-left: 20px;
 	margin-right: 20px;
@@ -186,6 +197,13 @@ End reset
 
 .completion-box-open:hover {
 	background-color: darkred;
+}
+
+.create-box {
+	margin-right: 1vw;
+	background-color: blue;
+	color: white;
+	cursor:pointer;
 }
 
 .content-project-box {
