--- a/main.css
+++ b/main.css
@@ -221,11 +221,30 @@ End reset
 	cursor:pointer;
 }
 
+.create-box:hover {
+	background-color: darkblue;
+}
+
 .content-project-box {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 3vh;
 	margin-right: auto;
 }
+
+.delete-project-box {
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: red;
+	color: white;
+	margin-right: auto;
+	margin-top: 1vh;
+	margin-bottom: 1vh;
+	cursor:pointer;
+}
+
+.delete-project-box:hover {
+	background-color: darkred;
+}
+
 
 .project-form {
 	padding-left: 2vw;
