--- a/main.css
+++ b/main.css
@@ -257,11 +257,6 @@ End reset
 	margin-right: 1vw;
 }
 
-
-
-
-
-
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -280,6 +275,7 @@ End reset
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
+	font-family: Arial, Helvetica, sans-serif;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
@@ -297,4 +293,8 @@ End reset
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+#title-box {
+	cursor:pointer;
 }
