mutliline text area description created

--- a/main.css
+++ b/main.css
@@ -113,6 +113,11 @@ End reset
 	justify-content: space-between;
 }
 
+.to-do-description-field {
+	height: 200px;
+}
+
+
 .closed {
 	background-color: lightgrey;
 }
